<resources>
    <string name="app_name">SCRUMtious</string>
    <string name="shared_preferences">Shared Preferences UID</string>
    <string name="signup_retype_password">Re-type password</string>
    <string name="signup_password">Password</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="login_signup_prompt">Don\'t have an account? Sign Up</string>
    <string name="app_summary">
        An Android app that helps manage the logistics of remote teams working on projects in a
        Agile Scrum environments. We keep track of their user stories, tasks, sprint backlog, product backlog, amongst
        many other things.
    </string>
    <string name="title_activity_project_tabs_screen">ProjectTabsScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_project_title">Title</string>
    <string name="create_project_create">Create</string>
    <string name="create_project_desc">Project Description</string>
    <string name="create_sprint_title">Title</string>
    <string name="create_sprint_create">Create</string>
    <string name="create_sprint_desc">Sprint Description</string>
    <string name="title_activity_create_project">Create Project</string>
    <string name="filter_owned_projects_only">Owned Projects Only</string>
    <string name="title_activity_individual_project_screen">IndividualProjectScreenActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="alert_dialogue_delete_project_password_prompt">Your Password</string>
    <string name="user_invite_row_title">Accept/decline invite to project:</string>
    <string name="add_project_btn_text">Add Project</string>
    <string name="add_member_btn_text">Add Member</string>
    <string name="invite_member_btn_text">Invite Member</string>
    <string name="add_user_story_btn_text">Add User Story</string>
    <string name="title_activity_product_backlog">ProductBacklogActivity</string>
    <string name="btn_product_backlog_text">Product Backlog</string>
    <string name="title_activity_create_user_story">Create User Story</string>
    <string name="create_user_story_desc">Description</string>
    <string name="create_user_story_name">Name</string>
    <string name="create_user_story_create">Create</string>
    <string name="create_user_story_points">Points</string>
    <string name="title_activity_individual_sprint">IndividualSprintActivity</string>
    <string name="create_task_desc_hint">Task Description</string>
    <string name="one_hundred_fourty_char_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra rutrum dui in aliquam. Curabitur efficitur lorem nec eros pulvinar, quis volutpat nisl rutrum. Nullam sit amet est accumsan, condimentum odio in, tristique lectus. Fusce molestie nulla ac vulputate mattis. Sed in mi ac leo vestibulum placerat in at risus. Nullam accumsan, diam at iaculis aliquam, leo orci dapibus tortor, accumsan iaculis ipsum nisi ut quam. Sed quis ipsum metus. Proin augue lorem, hendrerit quis nibh sit amet, mollis consequat odio. Phasellus ultrices vitae diam mollis fermentum. Praesent tempus, arcu id varius ultrices, tellus libero dictum lectus, vitae commodo arcu lacus nec turpis. Aliquam at lectus vel sapien elementum mollis vel non felis. Nunc imperdiet justo sit amet porttitor lacinia. Sed rutrum ultricies tincidunt. Nullam rutrum fermentum diam ac mattis. Aliquam in metus eu magna vestibulum vulputate. Etiam dolor odio.</string>
    <string name="task_assigned_to_prompt">Assigned To:</string>
    <string name="group_chat_message_hint">Your Response...</string>
    <string name="project_overview_sprint_name_not_available">No Sprint to Show</string>
    <string name="project_overview_sprint_time_not_available">time not available</string>
    <string name="welcome_to">Welcome to</string>
    <string name="current_user_story_progress">User Story Completion</string>
    <string name="no_current_sprint_to_show">No current sprint to show</string>
    <string name="current_sprint_progress">Current Sprint</string>
    <string name="unable_to_display_user_story_completion_progress">Unable to display user story completion progress</string>
    <string name="burndown_chart">Burndown Chart</string>
    <string name="other_information">Other Information</string>
    <string name="total_sprints_count">Total Sprints \n Count</string>
    <string name="total_projects_members_count">Total Project \n Members</string>
    <string name="project_creation_date">Project Creation \n Date</string>
    <string name="total_user_stories_completed_for_current_sprint">Total User Stories \n Completed</string>
    <string name="unable_to_retrieve_user_stories_data">Unable to retrieve user stories data</string>
    <string name="unable_to_retrieve_number_of_sprints_data">Unable to retrieve number of sprints data</string>
    <string name="unable_to_retrieve_project_creation_date">Unable to retrieve project creation date</string>
    <string name="unable_to_retrieve_number_of_members_data">Unable to retrieve number of members data</string>
    <string name="not_enough_data_to_show_burndown_chart">Not enough data to show Burndown Chart.</string>
    <string name="assign_task_to">Assign task to:</string>
    <string name="no_invitations_to_show">No invitations to show.</string>
    <string name="looks_like_you_have_no_projects">Looks like you have no projects.</string>
    <string name="no_user_stories_to_show_here">No user stories to show here.</string>
    <string name="looks_like_you_re_the_only_member_in_this_project">Looks like you\'re the only member in this project.</string>
    <string name="current_velocity">Current Velocity</string>
    <string name="unable_to_retrieve_current_velocity_data">Unable to retrieve current velocity data</string>
    <string name="unable_to_retrieve_number_of_days_data">Unable to retrieve number of days data</string>
    <string name="this_is_a_description_that_explains_what_the_sprint_is_about_and_now_i_am_running_out_of_things_to_say_so_i_ll_stop">This is a description that explains what the sprint is about, and now I am running out of things to say, so I\'ll stop.</string>
    <string name="assign_user_story_to">Assign user story to:</string>
    <string name="product_backlog">Product Backlog</string>
    <string name="no_tasks_to_show_here">No tasks to show here.</string>
    <string name="test_date_dec_20_2018_2_15pm">Dec 20, 2018 @ 2:15PM</string>
    <string name="test_name_louis_george_maurice_adolphe_roche_albert">Louis George Maurice Adolphe Roche Albert</string>
    <string name="test_email_john_doe_gmail_com">john.doe@gmail.com</string>
    <string name="project_navigation">Project Navigation</string>
    <string name="owner">Owner:</string>
    <string name="test_name_of_sprint">Name of Sprint</string>
    <string name="test_desc">This is a description that explains what the sprint is about, and now I am running out of things to say, so I\'ll stop.</string>
    <string name="test_assigned_to">Assigned to john.doe@gmail.com</string>
    <string name="test_invited_by">from john.doe@gmail.com</string>
    <string name="test_name_of_user_story">Name of User Story</string>
    <string name="test_completed_date">Completed on 01/01/2018 at 04:30 PM</string>
    <string name="select_sprint_end_date">Select End Date</string>
    <string name="select_sprint_start_date">Select Start Date</string>
    <string name="create_sprint_app_title">Create Sprint</string>
    <string name="add_task">Add Task</string>
    <string name="total_points">Total Points</string>
    <string name="days_passed">Days Passed</string>
    <string name="test_ratio_8_10">8/10</string>
    <string name="test_num_13">TextView</string>
    <string name="project_list_title">Project List</string>
    <string name="add_sprint">Add Sprint</string>
    <string name="looks_like_you_have_no_sprints">Looks like you have no sprints.</string>
</resources>
