<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:background="@color/login_screen_bg_color"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true"
              android:focusable="true"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:paddingLeft="@dimen/login_signup_padding"
              android:paddingRight="@dimen/login_signup_padding"
              android:id="@+id/loginLayout"
              tools:context="ca.mvp.scrumtious.scrumtious.view_impl.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/harley_script_regular"
        android:gravity="center"
        android:paddingBottom="@dimen/login_signup_center_logo_padding_bottom"
        android:text="@string/app_name"
        android:textColor="@color/app_typo_logo_white"
        android:textSize="64sp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginEmailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/SignupErrorText">

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/droid_sans"
            android:hint="@string/signup_email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/SignupErrorText"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/droid_sans"
            android:hint="@string/signup_password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword|textCapSentences"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/login_signup_btn_margin"
        android:layout_marginRight="@dimen/login_signup_btn_margin"
        android:background="@drawable/login_signup_btn"
        android:onClick="onSubmitLogin"
        android:shape="oval"
        android:text="@string/login_btn"
        android:textColor="@color/login_email_text_field_color"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:onClick="goToSignUpScreen"
        android:padding="5dp"
        android:fontFamily="@font/droid_sans"
        android:text="@string/login_signup_prompt"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        />
</LinearLayout>
