<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="false"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context="ca.mvp.scrumtious.scrumtious.view_impl.LoginScreenActivity">

    <TextView
        android:id="@+id/loginScreenMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/open_sans"
        android:text="SCRUMtious"
        android:textSize="22sp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginScreenEmailFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/loginScreenEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginScreenPasswordFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/loginScreenPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/signup_password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="onSubmitLogin"
        android:shape="oval"
        android:text="@string/login_btn"
        android:textColor="#1A237E"
        android:textSize="18sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:onClick="goToSignUpScreen"
        android:padding="5dp"
        android:text="@string/login_signup_prompt"
        android:textColor="#1A237E"
        android:textSize="14sp"
        />
</LinearLayout>
