<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerHorizontal="true"
              android:layout_centerVertical="true"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="false"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context="ca.mvp.scrumtious.scrumtious.view_impl.CreateProjectScreenActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/createProjectScreenTitleFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/createProjectScreenTitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_project_title"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="text"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createProjectScreenDescFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/createProjectScreenDescField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_project_desc"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="text"
            android:lines="8"

            android:scrollbars="vertical"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="onSubmitLogin"
        android:shape="oval"
        android:text="@string/create_project_create"
        android:textColor="#1A237E"
        android:textSize="18sp"

        />

</LinearLayout>
